added "get doctors appointments for patient" endpoint
